# tool-capability-protocol

./: .cicd_security_key  .dockerignore  .flake8  .gitignore  Analysis_ Oblivious Compromise Detection in Distributed AI Safety Networks.md  BRANCH_SYNC_PROCESS.md  CLAUDE.md  COMPLIANCE_CHECK_20250704_1230.md  CONCURRENT_SESSION_MANAGEMENT.md  DOCKER_SETUP.md  DOCKER_SUCCESS.md  Dockerfile  Dockerfile.lightweight  FULL_PATH_SUCCESS.md  LINGUISTIC_BRANCH_README.md  LOCAL_OLLAMA_TCP_COMPLETE.md  Makefile  README-Docker.md  README.md  README_BENCHMARK.md  RESEARCH_FINDINGS.md  SECURITY_FIRST_TCP.md  SECURITY_FIRST_TCP_COMPLETE.md  TCP_AGENCY_MONITORING_REPORT.md  TCP_KERNEL_INTEGRATION.md  TCP_KERNEL_OPTIMIZATION_DESIGN.md  TCP_KERNEL_SCALE_ANALYSIS.md  TCP_KERNEL_VIABILITY_DEMONSTRATION.md  TCP_LINGUISTIC_EVOLUTION.md  TCP_LINGUISTIC_NETWORK_SPECIFICATION.md  TCP_MCP_SERVER_COMMIT_INSTRUCTIONS.md  TCP_REGISTRY_ARCHITECTURE.md  TCP_SPECIFICATION.md  TCP_STEALTH_COMPROMISE_RESEARCH.md  TCP_STEALTH_RESEARCH_PACKAGE.md  bcachefs_analysis.py  benchmark_config.yaml  build_canonical_registry.py  claude-consortium-session  claude-orient-consortium  (+40 more)
.cicd_security_assessments/: 9d4806a1_1751690904.json
.claude/: settings.local.json
.claude/commands/: claude-orient-consortium  consortium-compact  mcp-resilient-sync
.github/workflows/: claude-session-sync.yml  code-review.yml  dependency-review.yml  quality.yml  security.yml
consortium/: BULLETIN_BOARD.md  CROSS_DIRECTORY_COMMANDS.md  INFRASTRUCTURE.md  OMNISCIENT_RESEARCH_STATUS_20250704.md  ONBOARDING.md  OPERATIONAL_EFFICIENCY_GUIDE.md  QUICKSTART.md  README.md  RESEARCH_PROCESS.md  SYSTEM_ARCHITECTURE.md  convergence-log.md  requirements.txt  research-directions-20250704_103119.md  research-directions-20250704_104157.md  setup-full-environment.sh  setup-researcher.sh
consortium/alex-rivera/: .claude-session-claude-session-elena-vasquez-20250706-175453  .claude-session-claude-session-marcus-chen-20250706-175811  CLAUDE.md  CLAUDE_SESSION_CONTEXT.md  FIRST_ASSIGNMENT.md  IDENTITY_CONTEXT_REMINDER.md  TCP_COLLABORATIVE_BREAKTHROUGH_REPORT.md  TCP_PRODUCTION_READINESS_COMPLETE.md  TCP_QUALITY_GAPS_ANALYSIS.md  activate-session.sh  activate_env.sh  ai_quantum_dependency_free.py  ai_quantum_test_report.json  ai_quantum_test_suite.py  code_issue_001_yuki.md  quantum_security_response_20250706.md  start-here.md  tcp_production_conflicts.db
consortium/aria-blackwood/: CLAUDE.md  GATE9_ADVERSARIAL_TESTING_METHODOLOGY.md  GATE9_ALIGNMENT_UPDATE.md  GATE9_SECURITY_STATUS_REPORT.md  GATE9_TCP_SECURITY_ASSESSMENT.md  IDENTITY_CONTEXT_REMINDER.md  activate-session.sh  adversarial_tcp_security_validator.py  debug_descriptor.py  (+18 more)
docker/: Dockerfile.tcp-kernel-builder  docker-compose.yml  run-simple-demo.sh
docs/: CASE_STUDY_INFOGRAPHIC_FORMATTING.md
examples/: 160_bits_breakdown.py  binary_analysis_demo.py  complete_pipeline_example.py  enhanced_agent_demo.py  grep_tcp_demo.py  llm_tool_selection.py  naive_agent_demo.py  pipeline_demo.py  secure_tcp_demo.py  simple_test.py  system_wide_tcp.py  tcp_grep_wrapper.py
kernel/: Makefile  README.md  tcp_kernel_module.c  test_tcp_kernel.sh
langchain-integration/: README.md  demo_tcp_real.py  demo_tcp_safety.py  requirements.txt  tcp_demo_complete.py  tcp_langchain_safety_agent.py  tcp_mcp_langchain_adapter.py  test_tcp_direct.py  test_tcp_langchain_integration.py
mcp-server/: README.md  hierarchical_encoder.py  pyproject.toml  safety_patterns.py  tcp_database.py  tcp_mcp_server.py
mcp-server/schemas/: README.md  family_encoding.json  hierarchical_family.json  safe_alternative.json  system_analysis.json  tcp_analysis.json  tcp_descriptor.json
sandbox/: capability_memo_20250703_005152.txt  capability_memo_20250703_005230.txt  capability_memo_20250703_005944.txt  decode_cat.py  decode_demo.py  decode_specific.py  demo_sandbox.py  final_demo.py  sandbox_agent.py  tool_registry.json  tool_registry.py
scripts/: activate-researcher-identity.sh  activate-researcher.sh  activate-team.sh  breakthrough-alert.sh  check-messages.sh  claude-consortium-session  claude-orient-consortium.sh  consortium-notifications.sh  convergence-handler.sh  director-approval.sh  emergency-commit-strategy.sh  git-operational-oversight.sh  lightweight-demo.sh  monitor-research-changes.sh  prepare-kernel-source.sh  quick-test.sh  research-dashboard.sh  research-diff-tracker.sh  research-intelligence.sh  run-lightweight-demo.py  tcp-kernel-quick-test.sh  tcp-researcher-worktree.sh  tcp-shell.sh
secure_demo_sandbox/: security_manifest.json
security_test_sandbox/: security_manifest.json
tcp/: __init__.py  demo_complete_security_system.py  local_ollama_demo.py
tcp-demo-controlled/: tcp_uncertainty_demo.py
tcp-knowledge-base/: README_CONSORTIUM_MONITORING.md  generate_complete_binary_db.py  local_llm_tcp_demo.py  monitor-tcp-progress.sh  multi_stage_refinery_results.json  optimized_multi_stage_results.json  refined_tcp_descriptors.json  tcp_man_page_refinery.py  tcp_multi_stage_refinery.py  tcp_optimized_multi_stage.py  tcp_progress_monitor.py  tcp_web_dashboard.py
tcp-server-full/: 2025-07-10-claude-session-tcp.txt  TCP_DEPLOYMENT_GUIDE.md  complete_deployment.sh  deploy_tcp_with_secrets.sh  digitalocean_deployment.py  droplet_setup.sh  expand_database.py  fix_packages.sh  ingest_10_percent.py  integrate_llm_enhancements.py  manual_setup.sh  minimal_tcp_deployment.py  quick_sample_test.py  setup_tcp_secrets.sh  simple_tcp_deployment.py  start_live_demo.sh  start_tcp_server_8081.sh  tcp_advanced_security_demo.py  tcp_agent_interface.py  tcp_burst_mode.py  tcp_deployment_config.json  tcp_llm_enhancement_demo_20250709_201633.json  tcp_llm_enhancements.json  tcp_monitor.sh  tcp_server_demo.py  temp_start.py  test_unfamiliar.py  traditional_vs_tcp_demo.py  validate_enhanced_tcp.py
tests/: conftest.py
(+2330 files in other folders)
